feat: add ping api and system resource
