# prowlarr/api_system.go
@@ -478,7 +478,7 @@ type ApiGetSystemStatusRequest struct {
 	ApiService *SystemApiService
 }
 
-func (r ApiGetSystemStatusRequest) Execute() (*http.Response, error) {
+func (r ApiGetSystemStatusRequest) Execute() (*SystemResource, *http.Response, error) {
 	return r.ApiService.GetSystemStatusExecute(r)
 }
 
@@ -496,16 +496,18 @@ func (a *SystemApiService) GetSystemStatus(ctx context.Context) ApiGetSystemStat
 }
 
 // Execute executes the request
-func (a *SystemApiService) GetSystemStatusExecute(r ApiGetSystemStatusRequest) (*http.Response, error) {
+//  @return SystemResource
+func (a *SystemApiService) GetSystemStatusExecute(r ApiGetSystemStatusRequest) (*SystemResource, *http.Response, error) {
 	var (
 		localVarHTTPMethod   = http.MethodGet
 		localVarPostBody     interface{}
 		formFiles            []formFile
+		localVarReturnValue  *SystemResource
 	)
 
 	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "SystemApiService.GetSystemStatus")
 	if err != nil {
-		return nil, &GenericOpenAPIError{error: err.Error()}
+		return localVarReturnValue, nil, &GenericOpenAPIError{error: err.Error()}
 	}
 
 	localVarPath := localBasePath + "/api/v1/system/status"
@@ -524,7 +526,7 @@ func (a *SystemApiService) GetSystemStatusExecute(r ApiGetSystemStatusRequest) (
 	}
 
 	// to determine the Accept header
-	localVarHTTPHeaderAccepts := []string{}
+	localVarHTTPHeaderAccepts := []string{"text/plain", "application/json", "text/json"}
 
 	// set Accept header
 	localVarHTTPHeaderAccept := selectHeaderAccept(localVarHTTPHeaderAccepts)
@@ -561,19 +563,19 @@ func (a *SystemApiService) GetSystemStatusExecute(r ApiGetSystemStatusRequest) (
 	}
 	req, err := a.client.prepareRequest(r.ctx, localVarPath, localVarHTTPMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, formFiles)
 	if err != nil {
-		return nil, err
+		return localVarReturnValue, nil, err
 	}
 
 	localVarHTTPResponse, err := a.client.callAPI(req)
 	if err != nil || localVarHTTPResponse == nil {
-		return localVarHTTPResponse, err
+		return localVarReturnValue, localVarHTTPResponse, err
 	}
 
 	localVarBody, err := io.ReadAll(localVarHTTPResponse.Body)
 	localVarHTTPResponse.Body.Close()
 	localVarHTTPResponse.Body = io.NopCloser(bytes.NewBuffer(localVarBody))
 	if err != nil {
-		return localVarHTTPResponse, err
+		return localVarReturnValue, localVarHTTPResponse, err
 	}
 
 	if localVarHTTPResponse.StatusCode >= 300 {
@@ -581,8 +583,17 @@ func (a *SystemApiService) GetSystemStatusExecute(r ApiGetSystemStatusRequest) (
 			body:  localVarBody,
 			error: localVarHTTPResponse.Status,
 		}
-		return localVarHTTPResponse, newErr
+		return localVarReturnValue, localVarHTTPResponse, newErr
 	}
 
-	return localVarHTTPResponse, nil
+	err = a.client.decode(&localVarReturnValue, localVarBody, localVarHTTPResponse.Header.Get("Content-Type"))
+	if err != nil {
+		newErr := &GenericOpenAPIError{
+			body:  localVarBody,
+			error: err.Error(),
+		}
+		return localVarReturnValue, localVarHTTPResponse, newErr
+	}
+
+	return localVarReturnValue, localVarHTTPResponse, nil
 }
